# Web-agent

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  RELEASE.md  USER-GUIDE.md  config.json  tasks_api.md
realeses/windows/: config.json
src/: main.cpp
src/agent/: Agent.cpp  Agent.h
src/config/: Config.cpp  Config.h  ConfigManager.cpp
src/http/: HttpClient.cpp  HttpClient.h
src/tasks/: Task.h  TaskExecutor.cpp  TaskExecutor.h
